<resources>
    <string name="app_name">diabeteTracking</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email and/or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Account View</string>
    <string name="button_enter_data">Enter Data</string>
    <string name="button_view_data">View Data</string>
    <string name="button_recipes">Recipes</string>
    <string name="button_logout">Logout</string>
    <string name="button_view_accounts">View Accounts</string>
    <string name="desc">Add Icon</string>
    <string name="sugar_levels">Enter Sugar Level</string>
    <string name="sugar_submit">Submit</string>
    <string name="your_sugar">On this date your average blood glucose level is:</string>
    <string name="sugar_added">Levels entered</string>
    <string name="sugar_high">Sugar Level is HIGH</string>
    <string name="sugar_low">Sugar Level is LOW</string>
    <string name="sugar_no_entry">No Data Entered</string>
    <string name="day_sugar">Sugar Level</string>
    <string name="entered_levels">Your daily levels are:</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="delete">DELETE</string>
</resources>