<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"

    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="60dp"
    tools:context=".activities.AddRecord">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo" />

    <DatePicker
        android:id="@+id/dateViewer"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_and_color"
        android:text="@string/sugar_submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_sugar"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:textSize="35sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/entered_levels"
            android:textSize="17sp" />

        <ListView
            android:layout_marginTop="20dp"
            android:id="@+id/user_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fadeScrollbars="false"/>


    </LinearLayout>


</LinearLayout>